[tool.poetry]
name = "qtvr"
version = "0.1.0"
description = ""
authors = ["Roland van Laar <roland@rolandvanlaar.nl>"]

[tool.poetry.dependencies]
python = "^3.10"
mrcrowbar = {git = "https://github.com/moralrecordings/mrcrowbar"}
numpy = "^1.25.2"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
ipython = "*"
ipdb = "*"
black = "*"
pre-commit = "^3.4.0"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
decode_cinepak = "qtvr.decoders.cinepak:main"
print_atoms = "qtvr.print_atoms:main"
make_mosaic_ffmpeg = "qtvr.mosaic_ffmpeg:main"
make_mosaic = "qtvr.mosaic:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
